Added code to execute binary from notebook

--- a/Clustering_Metric.ipynb
+++ b/Clustering_Metric.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,8 @@
     "from matplotlib import pyplot as plt\n",
     "import matplotlib.animation as ani\n",
     "import bar_chart_race as bcr\n",
+    "import os\n",
+    "import subprocess\n",
     "%matplotlib qt"
    ]
   },
@@ -41,6 +43,176 @@
     "x=np.linspace(0,10)\n",
     "y=x**2\n",
     "plt.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
+      "./test -f ../ExampleData/M2A_S3_1001_Avi.xtc -t ../ExampleData/M2A_S3.top -o ../ExampleData/test_out_PBC.pdb -m 10\n",
+      "Conf:     0 | MaxClusterSize:    46 | %age Clustered: 81.41 | %age Strong : 72.87 | Cluster Charge :  -8\n",
+      "Conf:    10 | MaxClusterSize:    43 | %age Clustered: 84.62 | %age Strong : 78.51 | Cluster Charge :  -2\n",
+      "Conf:    20 | MaxClusterSize:    35 | %age Clustered: 82.05 | %age Strong : 68.22 | Cluster Charge :  -8\n",
+      "Conf:    30 | MaxClusterSize:    55 | %age Clustered: 87.18 | %age Strong : 70.29 | Cluster Charge :  -1\n",
+      "Conf:    40 | MaxClusterSize:    21 | %age Clustered: 85.26 | %age Strong : 71.09 | Cluster Charge :   6\n",
+      "Conf:    50 | MaxClusterSize:    36 | %age Clustered: 87.18 | %age Strong : 66.67 | Cluster Charge :   3\n",
+      "Conf:    60 | MaxClusterSize:    56 | %age Clustered: 81.41 | %age Strong : 70.00 | Cluster Charge :  -2\n",
+      "Conf:    70 | MaxClusterSize:    65 | %age Clustered: 83.97 | %age Strong : 75.91 | Cluster Charge :  -1\n",
+      "Conf:    80 | MaxClusterSize:    64 | %age Clustered: 80.77 | %age Strong : 77.14 | Cluster Charge :  -5\n",
+      "Conf:    90 | MaxClusterSize:    48 | %age Clustered: 86.54 | %age Strong : 76.81 | Cluster Charge :  -5\n",
+      "Conf:   100 | MaxClusterSize:    45 | %age Clustered: 85.26 | %age Strong : 78.01 | Cluster Charge :  -1\n",
+      "Conf:   110 | MaxClusterSize:    51 | %age Clustered: 82.69 | %age Strong : 72.92 | Cluster Charge :  -1\n",
+      "Conf:   120 | MaxClusterSize:    17 | %age Clustered: 83.97 | %age Strong : 69.70 | Cluster Charge :   3\n",
+      "Conf:   130 | MaxClusterSize:    62 | %age Clustered: 89.74 | %age Strong : 68.00 | Cluster Charge :  -4\n",
+      "Conf:   140 | MaxClusterSize:    77 | %age Clustered: 83.97 | %age Strong : 66.67 | Cluster Charge :   3\n",
+      "Conf:   150 | MaxClusterSize:    68 | %age Clustered: 89.74 | %age Strong : 76.81 | Cluster Charge :   1\n",
+      "Conf:   160 | MaxClusterSize:    47 | %age Clustered: 89.10 | %age Strong : 69.59 | Cluster Charge :   3\n",
+      "Conf:   170 | MaxClusterSize:    32 | %age Clustered: 85.26 | %age Strong : 65.99 | Cluster Charge :   6\n",
+      "Conf:   180 | MaxClusterSize:    65 | %age Clustered: 84.62 | %age Strong : 70.99 | Cluster Charge :  -4\n",
+      "Conf:   190 | MaxClusterSize:    39 | %age Clustered: 84.62 | %age Strong : 71.94 | Cluster Charge :   4\n",
+      "Conf:   200 | MaxClusterSize:    34 | %age Clustered: 81.41 | %age Strong : 74.02 | Cluster Charge :  -2\n",
+      "Conf:   210 | MaxClusterSize:    40 | %age Clustered: 83.33 | %age Strong : 70.15 | Cluster Charge :   1\n",
+      "Conf:   220 | MaxClusterSize:    21 | %age Clustered: 83.33 | %age Strong : 73.44 | Cluster Charge :  11\n",
+      "Conf:   230 | MaxClusterSize:    23 | %age Clustered: 85.90 | %age Strong : 76.74 | Cluster Charge :  -3\n",
+      "Conf:   240 | MaxClusterSize:    38 | %age Clustered: 86.54 | %age Strong : 67.94 | Cluster Charge :   7\n",
+      "Conf:   250 | MaxClusterSize:    28 | %age Clustered: 80.13 | %age Strong : 69.23 | Cluster Charge :   4\n",
+      "Conf:   260 | MaxClusterSize:    20 | %age Clustered: 85.26 | %age Strong : 68.79 | Cluster Charge :  -4\n",
+      "Conf:   270 | MaxClusterSize:    30 | %age Clustered: 83.33 | %age Strong : 70.07 | Cluster Charge :   3\n",
+      "Conf:   280 | MaxClusterSize:    53 | %age Clustered: 82.69 | %age Strong : 72.39 | Cluster Charge :   0\n",
+      "Conf:   290 | MaxClusterSize:    61 | %age Clustered: 84.62 | %age Strong : 71.63 | Cluster Charge :  -3\n",
+      "Conf:   300 | MaxClusterSize:    22 | %age Clustered: 87.82 | %age Strong : 68.99 | Cluster Charge :   0\n",
+      "Conf:   310 | MaxClusterSize:    32 | %age Clustered: 85.26 | %age Strong : 67.42 | Cluster Charge :  -1\n",
+      "Conf:   320 | MaxClusterSize:    40 | %age Clustered: 83.33 | %age Strong : 75.78 | Cluster Charge :  -1\n",
+      "Conf:   330 | MaxClusterSize:    49 | %age Clustered: 85.90 | %age Strong : 75.74 | Cluster Charge :  -3\n",
+      "Conf:   340 | MaxClusterSize:    28 | %age Clustered: 81.41 | %age Strong : 70.54 | Cluster Charge :  -3\n",
+      "Conf:   350 | MaxClusterSize:    35 | %age Clustered: 82.05 | %age Strong : 70.99 | Cluster Charge :   1\n",
+      "Conf:   360 | MaxClusterSize:    45 | %age Clustered: 86.54 | %age Strong : 68.66 | Cluster Charge :   4\n",
+      "Conf:   370 | MaxClusterSize:    56 | %age Clustered: 80.13 | %age Strong : 70.83 | Cluster Charge :   7\n",
+      "Conf:   380 | MaxClusterSize:    46 | %age Clustered: 79.49 | %age Strong : 75.57 | Cluster Charge :   0\n",
+      "Conf:   390 | MaxClusterSize:    26 | %age Clustered: 83.97 | %age Strong : 75.56 | Cluster Charge :   1\n",
+      "Conf:   400 | MaxClusterSize:    41 | %age Clustered: 78.85 | %age Strong : 71.43 | Cluster Charge :  -3\n",
+      "Conf:   410 | MaxClusterSize:    26 | %age Clustered: 77.56 | %age Strong : 75.76 | Cluster Charge :  -1\n",
+      "Conf:   420 | MaxClusterSize:    62 | %age Clustered: 83.97 | %age Strong : 65.89 | Cluster Charge :  -5\n",
+      "Conf:   430 | MaxClusterSize:    62 | %age Clustered: 86.54 | %age Strong : 69.57 | Cluster Charge :  -5\n",
+      "Conf:   440 | MaxClusterSize:    24 | %age Clustered: 87.82 | %age Strong : 66.41 | Cluster Charge :   0\n",
+      "Conf:   450 | MaxClusterSize:    43 | %age Clustered: 80.13 | %age Strong : 70.00 | Cluster Charge :   2\n",
+      "Conf:   460 | MaxClusterSize:    58 | %age Clustered: 85.26 | %age Strong : 67.14 | Cluster Charge :  -3\n",
+      "Conf:   470 | MaxClusterSize:    66 | %age Clustered: 83.97 | %age Strong : 79.39 | Cluster Charge :  -4\n",
+      "Conf:   480 | MaxClusterSize:    32 | %age Clustered: 80.13 | %age Strong : 75.40 | Cluster Charge :  -3\n",
+      "Conf:   490 | MaxClusterSize:    24 | %age Clustered: 78.85 | %age Strong : 71.19 | Cluster Charge :   0\n",
+      "Conf:   500 | MaxClusterSize:    25 | %age Clustered: 83.33 | %age Strong : 71.31 | Cluster Charge :   2\n",
+      "Conf:   510 | MaxClusterSize:    16 | %age Clustered: 82.69 | %age Strong : 71.05 | Cluster Charge :   3\n",
+      "Conf:   520 | MaxClusterSize:    22 | %age Clustered: 83.97 | %age Strong : 67.23 | Cluster Charge :  -3\n",
+      "Conf:   530 | MaxClusterSize:    46 | %age Clustered: 78.21 | %age Strong : 68.03 | Cluster Charge :  -4\n",
+      "Conf:   540 | MaxClusterSize:    22 | %age Clustered: 83.33 | %age Strong : 67.42 | Cluster Charge :   1\n",
+      "Conf:   550 | MaxClusterSize:    28 | %age Clustered: 80.13 | %age Strong : 72.87 | Cluster Charge :  -2\n",
+      "Conf:   560 | MaxClusterSize:    44 | %age Clustered: 81.41 | %age Strong : 72.36 | Cluster Charge :  -9\n",
+      "Conf:   570 | MaxClusterSize:    58 | %age Clustered: 78.21 | %age Strong : 74.62 | Cluster Charge :  -7\n",
+      "Conf:   580 | MaxClusterSize:    20 | %age Clustered: 89.10 | %age Strong : 77.21 | Cluster Charge :   2\n",
+      "Conf:   590 | MaxClusterSize:    42 | %age Clustered: 78.21 | %age Strong : 76.07 | Cluster Charge : -11\n",
+      "Conf:   600 | MaxClusterSize:    28 | %age Clustered: 80.77 | %age Strong : 73.28 | Cluster Charge :  -5\n",
+      "Conf:   610 | MaxClusterSize:    22 | %age Clustered: 80.77 | %age Strong : 70.18 | Cluster Charge :   2\n",
+      "Conf:   620 | MaxClusterSize:    22 | %age Clustered: 82.69 | %age Strong : 72.97 | Cluster Charge :   0\n",
+      "Conf:   630 | MaxClusterSize:    27 | %age Clustered: 80.77 | %age Strong : 68.00 | Cluster Charge :  -2\n",
+      "Conf:   640 | MaxClusterSize:    48 | %age Clustered: 82.69 | %age Strong : 68.89 | Cluster Charge :   6\n",
+      "Conf:   650 | MaxClusterSize:    27 | %age Clustered: 85.26 | %age Strong : 75.00 | Cluster Charge :  -1\n",
+      "Conf:   660 | MaxClusterSize:    26 | %age Clustered: 85.90 | %age Strong : 75.00 | Cluster Charge :   1\n",
+      "Conf:   670 | MaxClusterSize:    27 | %age Clustered: 87.82 | %age Strong : 77.10 | Cluster Charge :   5\n",
+      "Conf:   680 | MaxClusterSize:    40 | %age Clustered: 82.69 | %age Strong : 74.42 | Cluster Charge :   6\n",
+      "Conf:   690 | MaxClusterSize:    27 | %age Clustered: 85.26 | %age Strong : 68.46 | Cluster Charge :  -1\n",
+      "Conf:   700 | MaxClusterSize:    27 | %age Clustered: 85.26 | %age Strong : 67.42 | Cluster Charge :   1\n",
+      "Conf:   710 | MaxClusterSize:    26 | %age Clustered: 82.69 | %age Strong : 68.91 | Cluster Charge :   2\n",
+      "Conf:   720 | MaxClusterSize:    12 | %age Clustered: 80.77 | %age Strong : 66.67 | Cluster Charge :  -5\n",
+      "Conf:   730 | MaxClusterSize:    17 | %age Clustered: 79.49 | %age Strong : 70.43 | Cluster Charge :   5\n",
+      "Conf:   740 | MaxClusterSize:    28 | %age Clustered: 85.90 | %age Strong : 68.50 | Cluster Charge :  -7\n",
+      "Conf:   750 | MaxClusterSize:    27 | %age Clustered: 83.97 | %age Strong : 75.00 | Cluster Charge :  -3\n",
+      "Conf:   760 | MaxClusterSize:    25 | %age Clustered: 75.64 | %age Strong : 74.11 | Cluster Charge :   5\n",
+      "Conf:   770 | MaxClusterSize:    16 | %age Clustered: 83.97 | %age Strong : 69.75 | Cluster Charge :   0\n",
+      "Conf:   780 | MaxClusterSize:    27 | %age Clustered: 82.69 | %age Strong : 69.05 | Cluster Charge :  -2\n",
+      "Conf:   790 | MaxClusterSize:    21 | %age Clustered: 83.33 | %age Strong : 76.07 | Cluster Charge :  -1\n",
+      "Conf:   800 | MaxClusterSize:    21 | %age Clustered: 74.36 | %age Strong : 73.21 | Cluster Charge :  -1\n",
+      "Conf:   810 | MaxClusterSize:    33 | %age Clustered: 80.77 | %age Strong : 78.74 | Cluster Charge :  -4\n",
+      "Conf:   820 | MaxClusterSize:    23 | %age Clustered: 87.18 | %age Strong : 73.17 | Cluster Charge :   1\n",
+      "Conf:   830 | MaxClusterSize:    13 | %age Clustered: 83.97 | %age Strong : 72.17 | Cluster Charge :   1\n",
+      "Conf:   840 | MaxClusterSize:    30 | %age Clustered: 85.26 | %age Strong : 72.36 | Cluster Charge :   2\n",
+      "Conf:   850 | MaxClusterSize:    63 | %age Clustered: 80.13 | %age Strong : 71.97 | Cluster Charge : -10\n",
+      "Conf:   860 | MaxClusterSize:    28 | %age Clustered: 83.97 | %age Strong : 65.41 | Cluster Charge :  -2\n",
+      "Conf:   870 | MaxClusterSize:    23 | %age Clustered: 85.26 | %age Strong : 73.39 | Cluster Charge :   2\n",
+      "Conf:   880 | MaxClusterSize:    50 | %age Clustered: 85.26 | %age Strong : 66.67 | Cluster Charge :  -7\n",
+      "Conf:   890 | MaxClusterSize:    41 | %age Clustered: 78.21 | %age Strong : 72.03 | Cluster Charge :  -4\n",
+      "Conf:   900 | MaxClusterSize:    46 | %age Clustered: 81.41 | %age Strong : 71.21 | Cluster Charge :  -4\n",
+      "Conf:   910 | MaxClusterSize:    42 | %age Clustered: 87.18 | %age Strong : 69.29 | Cluster Charge :   0\n",
+      "Conf:   920 | MaxClusterSize:    51 | %age Clustered: 86.54 | %age Strong : 67.55 | Cluster Charge :  -6\n",
+      "Conf:   930 | MaxClusterSize:    48 | %age Clustered: 83.97 | %age Strong : 77.69 | Cluster Charge :  -2\n",
+      "Conf:   940 | MaxClusterSize:    37 | %age Clustered: 80.13 | %age Strong : 70.18 | Cluster Charge :  -3\n",
+      "Conf:   950 | MaxClusterSize:    30 | %age Clustered: 82.69 | %age Strong : 70.15 | Cluster Charge :  -1\n",
+      "Conf:   960 | MaxClusterSize:    40 | %age Clustered: 87.82 | %age Strong : 67.57 | Cluster Charge :  -3\n",
+      "Conf:   970 | MaxClusterSize:    34 | %age Clustered: 89.74 | %age Strong : 72.03 | Cluster Charge :   4\n",
+      "Conf:   980 | MaxClusterSize:    38 | %age Clustered: 82.05 | %age Strong : 73.33 | Cluster Charge :   1\n",
+      "Conf:   990 | MaxClusterSize:    41 | %age Clustered: 83.33 | %age Strong : 68.18 | Cluster Charge :  -3\n",
+      "Conf:  1000 | MaxClusterSize:    29 | %age Clustered: 86.54 | %age Strong : 77.21 | Cluster Charge :   2\n",
+      "Exited loop\n",
+      "\n",
+      "Overall     | MaxClusterSize: 38.21 | %age Clustered: 83.33 | %age Strong : 71.67 | Cluster Charge : -1.23\n",
+      "The elapsed time is 7.726088 seconds\n",
+      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"make xtc_1001_silent -C bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
+      "rm -f ./obj/*.o *~ core /*~ \n",
+      "rm -f gmon.out perf_analysis.txt\n",
+      "rm -f test\n",
+      "rm -f ../ExampleData/test_out.pdb\n",
+      "rm -f cluster_max_size.dat\n",
+      "rm -f cluster_statistics.dat\n",
+      "rm -f ring_statistics.dat\n",
+      "rm -f Kstatistics.dat\n",
+      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"make clean -C bin\")"
    ]
   },
   {
