New functions in notebook

--- a/Clustering_Metric.ipynb
+++ b/Clustering_Metric.ipynb
@@ -47,170 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "./test -f ../ExampleData/M1B_Sh_avi.xtc -t ../ExampleData/run156.top -o ../ExampleData/M1B_Sh_out.pdb -m 10\n",
-      "Conf:     0 | MaxClusterSize:     6 | %age Clustered: 41.67 | %age Strong : 61.70 | Cluster Charge :  -4\n",
-      "Conf:    10 | MaxClusterSize:     4 | %age Clustered: 39.10 | %age Strong : 60.53 | Cluster Charge :  -7\n",
-      "Conf:    20 | MaxClusterSize:     5 | %age Clustered: 26.28 | %age Strong : 50.00 | Cluster Charge :  -3\n",
-      "Conf:    30 | MaxClusterSize:     5 | %age Clustered: 33.33 | %age Strong : 76.32 | Cluster Charge :  -2\n",
-      "Conf:    40 | MaxClusterSize:     6 | %age Clustered: 41.03 | %age Strong : 56.82 | Cluster Charge :  -5\n",
-      "Conf:    50 | MaxClusterSize:     4 | %age Clustered: 46.15 | %age Strong : 54.35 | Cluster Charge :  -2\n",
-      "Conf:    60 | MaxClusterSize:     4 | %age Clustered: 40.38 | %age Strong : 71.05 | Cluster Charge :  -6\n",
-      "Conf:    70 | MaxClusterSize:     5 | %age Clustered: 42.31 | %age Strong : 54.55 | Cluster Charge :  -3\n",
-      "Conf:    80 | MaxClusterSize:     5 | %age Clustered: 32.69 | %age Strong : 60.00 | Cluster Charge :   0\n",
-      "Conf:    90 | MaxClusterSize:     4 | %age Clustered: 39.74 | %age Strong : 72.50 | Cluster Charge :  -4\n",
-      "Conf:   100 | MaxClusterSize:     4 | %age Clustered: 46.79 | %age Strong : 67.31 | Cluster Charge :  -9\n",
-      "Conf:   110 | MaxClusterSize:     4 | %age Clustered: 46.79 | %age Strong : 69.23 | Cluster Charge :  -5\n",
-      "Conf:   120 | MaxClusterSize:     3 | %age Clustered: 32.69 | %age Strong : 60.00 | Cluster Charge : -10\n",
-      "Conf:   130 | MaxClusterSize:     4 | %age Clustered: 37.18 | %age Strong : 82.05 | Cluster Charge :   0\n",
-      "Conf:   140 | MaxClusterSize:     5 | %age Clustered: 26.92 | %age Strong : 66.67 | Cluster Charge :  -3\n",
-      "Conf:   150 | MaxClusterSize:     5 | %age Clustered: 30.77 | %age Strong : 57.58 | Cluster Charge :  -4\n",
-      "Conf:   160 | MaxClusterSize:     6 | %age Clustered: 34.62 | %age Strong : 63.89 | Cluster Charge :  -5\n",
-      "Conf:   170 | MaxClusterSize:     3 | %age Clustered: 37.82 | %age Strong : 57.14 | Cluster Charge :  -8\n",
-      "Conf:   180 | MaxClusterSize:     6 | %age Clustered: 33.97 | %age Strong : 56.25 | Cluster Charge :  -4\n",
-      "Conf:   190 | MaxClusterSize:     4 | %age Clustered: 32.05 | %age Strong : 70.97 | Cluster Charge :  -1\n",
-      "Conf:   200 | MaxClusterSize:     5 | %age Clustered: 32.69 | %age Strong : 71.43 | Cluster Charge :  -3\n",
-      "Exited loop\n",
-      "\n",
-      "Overall     | MaxClusterSize:  4.61 | %age Clustered: 36.50 | %age Strong : 65.35 | Cluster Charge : -4.54\n",
-      "The elapsed time is 1.022830 seconds\n",
-      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "./test -f ../ExampleData/M1B_S1_avi.xtc -t ../ExampleData/run312.top -o ../ExampleData/M1B_S1_out.pdb -m 10\n",
-      "Conf:     0 | MaxClusterSize:    11 | %age Clustered: 56.41 | %age Strong : 63.83 | Cluster Charge :  -5\n",
-      "Conf:    10 | MaxClusterSize:    11 | %age Clustered: 55.13 | %age Strong : 62.99 | Cluster Charge :  -2\n",
-      "Conf:    20 | MaxClusterSize:    13 | %age Clustered: 51.28 | %age Strong : 75.00 | Cluster Charge :  -5\n",
-      "Conf:    30 | MaxClusterSize:     9 | %age Clustered: 60.90 | %age Strong : 71.24 | Cluster Charge :  -5\n",
-      "Conf:    40 | MaxClusterSize:    12 | %age Clustered: 55.77 | %age Strong : 63.50 | Cluster Charge : -10\n",
-      "Conf:    50 | MaxClusterSize:    25 | %age Clustered: 53.53 | %age Strong : 69.40 | Cluster Charge :  -9\n",
-      "Conf:    60 | MaxClusterSize:    28 | %age Clustered: 54.17 | %age Strong : 70.83 | Cluster Charge :  -7\n",
-      "Conf:    70 | MaxClusterSize:    28 | %age Clustered: 59.29 | %age Strong : 75.00 | Cluster Charge : -13\n",
-      "Conf:    80 | MaxClusterSize:    30 | %age Clustered: 65.38 | %age Strong : 66.05 | Cluster Charge :  -7\n",
-      "Conf:    90 | MaxClusterSize:    22 | %age Clustered: 59.29 | %age Strong : 68.06 | Cluster Charge : -10\n",
-      "Conf:   100 | MaxClusterSize:    16 | %age Clustered: 61.22 | %age Strong : 75.31 | Cluster Charge :  -7\n",
-      "Conf:   110 | MaxClusterSize:    13 | %age Clustered: 56.73 | %age Strong : 67.81 | Cluster Charge :  -3\n",
-      "Conf:   120 | MaxClusterSize:    12 | %age Clustered: 61.54 | %age Strong : 67.76 | Cluster Charge :  -1\n",
-      "Conf:   130 | MaxClusterSize:    30 | %age Clustered: 56.41 | %age Strong : 65.25 | Cluster Charge :  -8\n",
-      "Conf:   140 | MaxClusterSize:     8 | %age Clustered: 59.62 | %age Strong : 69.66 | Cluster Charge :   0\n",
-      "Conf:   150 | MaxClusterSize:    11 | %age Clustered: 53.85 | %age Strong : 65.55 | Cluster Charge :  -3\n",
-      "Conf:   160 | MaxClusterSize:    22 | %age Clustered: 56.41 | %age Strong : 63.12 | Cluster Charge : -10\n",
-      "Conf:   170 | MaxClusterSize:    10 | %age Clustered: 54.49 | %age Strong : 63.43 | Cluster Charge : -11\n",
-      "Conf:   180 | MaxClusterSize:    13 | %age Clustered: 58.65 | %age Strong : 67.35 | Cluster Charge :  -5\n",
-      "Conf:   190 | MaxClusterSize:    21 | %age Clustered: 58.97 | %age Strong : 66.88 | Cluster Charge :  -4\n",
-      "Conf:   200 | MaxClusterSize:    15 | %age Clustered: 56.41 | %age Strong : 69.66 | Cluster Charge :  -7\n",
-      "Exited loop\n",
-      "\n",
-      "Overall     | MaxClusterSize: 17.25 | %age Clustered: 57.61 | %age Strong : 67.52 | Cluster Charge : -6.48\n",
-      "The elapsed time is 2.269810 seconds\n",
-      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "./test -f ../ExampleData/M1B_S2_avi.xtc -t ../ExampleData/run624.top -o ../ExampleData/M1B_S2_out.pdb -m 10\n",
-      "Conf:     0 | MaxClusterSize:   403 | %age Clustered: 84.29 | %age Strong : 69.49 | Cluster Charge : -87\n",
-      "Conf:    10 | MaxClusterSize:   365 | %age Clustered: 81.89 | %age Strong : 68.15 | Cluster Charge : -86\n",
-      "Conf:    20 | MaxClusterSize:   291 | %age Clustered: 80.93 | %age Strong : 69.13 | Cluster Charge : -49\n",
-      "Conf:    30 | MaxClusterSize:   377 | %age Clustered: 80.93 | %age Strong : 72.76 | Cluster Charge : -85\n",
-      "Conf:    40 | MaxClusterSize:   330 | %age Clustered: 81.73 | %age Strong : 68.38 | Cluster Charge : -60\n",
-      "Conf:    50 | MaxClusterSize:   367 | %age Clustered: 82.53 | %age Strong : 70.29 | Cluster Charge : -70\n",
-      "Conf:    60 | MaxClusterSize:   340 | %age Clustered: 78.37 | %age Strong : 68.22 | Cluster Charge : -46\n",
-      "Conf:    70 | MaxClusterSize:   348 | %age Clustered: 80.13 | %age Strong : 71.16 | Cluster Charge : -71\n",
-      "Conf:    80 | MaxClusterSize:   345 | %age Clustered: 78.37 | %age Strong : 71.20 | Cluster Charge : -46\n",
-      "Conf:    90 | MaxClusterSize:   355 | %age Clustered: 81.25 | %age Strong : 68.62 | Cluster Charge : -58\n",
-      "Conf:   100 | MaxClusterSize:   347 | %age Clustered: 82.05 | %age Strong : 70.03 | Cluster Charge : -73\n",
-      "Conf:   110 | MaxClusterSize:   338 | %age Clustered: 82.53 | %age Strong : 70.92 | Cluster Charge : -68\n",
-      "Conf:   120 | MaxClusterSize:   354 | %age Clustered: 82.21 | %age Strong : 71.69 | Cluster Charge : -74\n",
-      "Conf:   130 | MaxClusterSize:   363 | %age Clustered: 80.61 | %age Strong : 73.19 | Cluster Charge : -79\n",
-      "Conf:   140 | MaxClusterSize:   308 | %age Clustered: 82.05 | %age Strong : 71.50 | Cluster Charge : -64\n",
-      "Conf:   150 | MaxClusterSize:   307 | %age Clustered: 80.77 | %age Strong : 73.93 | Cluster Charge : -52\n",
-      "Conf:   160 | MaxClusterSize:   358 | %age Clustered: 82.05 | %age Strong : 71.36 | Cluster Charge : -78\n",
-      "Conf:   170 | MaxClusterSize:   380 | %age Clustered: 83.81 | %age Strong : 70.76 | Cluster Charge : -87\n",
-      "Conf:   180 | MaxClusterSize:   360 | %age Clustered: 79.97 | %age Strong : 70.03 | Cluster Charge : -62\n",
-      "Conf:   190 | MaxClusterSize:   391 | %age Clustered: 82.37 | %age Strong : 68.95 | Cluster Charge : -79\n",
-      "Conf:   200 | MaxClusterSize:   377 | %age Clustered: 82.85 | %age Strong : 70.69 | Cluster Charge : -72\n",
-      "Exited loop\n",
-      "\n",
-      "Overall     | MaxClusterSize: 350.90 | %age Clustered: 81.19 | %age Strong : 70.71 | Cluster Charge : -68.30\n",
-      "The elapsed time is 7.105765 seconds\n",
-      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "./test -f ../ExampleData/M1B_S3_avi.xtc -t ../ExampleData/run1248.top -o ../ExampleData/M1B_S3_out.pdb -m 10\n",
-      "Conf:     0 | MaxClusterSize:   900 | %age Clustered: 88.22 | %age Strong : 72.22 | Cluster Charge : -155\n",
-      "Conf:    10 | MaxClusterSize:   897 | %age Clustered: 89.42 | %age Strong : 69.37 | Cluster Charge : -131\n",
-      "Conf:    20 | MaxClusterSize:   929 | %age Clustered: 89.58 | %age Strong : 72.63 | Cluster Charge : -152\n",
-      "Conf:    30 | MaxClusterSize:   973 | %age Clustered: 88.62 | %age Strong : 72.25 | Cluster Charge : -161\n",
-      "Conf:    40 | MaxClusterSize:   947 | %age Clustered: 89.42 | %age Strong : 71.37 | Cluster Charge : -143\n",
-      "Conf:    50 | MaxClusterSize:   926 | %age Clustered: 87.50 | %age Strong : 70.15 | Cluster Charge : -149\n",
-      "Conf:    60 | MaxClusterSize:   931 | %age Clustered: 87.50 | %age Strong : 71.93 | Cluster Charge : -143\n",
-      "Conf:    70 | MaxClusterSize:   953 | %age Clustered: 89.02 | %age Strong : 71.26 | Cluster Charge : -164\n",
-      "Conf:    80 | MaxClusterSize:   897 | %age Clustered: 87.26 | %age Strong : 72.55 | Cluster Charge : -137\n",
-      "Conf:    90 | MaxClusterSize:   938 | %age Clustered: 87.66 | %age Strong : 69.35 | Cluster Charge : -168\n",
-      "Conf:   100 | MaxClusterSize:   934 | %age Clustered: 87.66 | %age Strong : 70.89 | Cluster Charge : -143\n",
-      "Conf:   110 | MaxClusterSize:   925 | %age Clustered: 87.74 | %age Strong : 69.43 | Cluster Charge : -140\n",
-      "Conf:   120 | MaxClusterSize:   922 | %age Clustered: 87.02 | %age Strong : 70.58 | Cluster Charge : -132\n",
-      "Conf:   130 | MaxClusterSize:   926 | %age Clustered: 89.10 | %age Strong : 72.90 | Cluster Charge : -130\n",
-      "Conf:   140 | MaxClusterSize:   902 | %age Clustered: 88.22 | %age Strong : 70.84 | Cluster Charge : -108\n",
-      "Conf:   150 | MaxClusterSize:   907 | %age Clustered: 87.10 | %age Strong : 70.38 | Cluster Charge : -144\n",
-      "Conf:   160 | MaxClusterSize:   935 | %age Clustered: 87.18 | %age Strong : 71.16 | Cluster Charge : -151\n",
-      "Conf:   170 | MaxClusterSize:   930 | %age Clustered: 89.34 | %age Strong : 71.78 | Cluster Charge : -139\n",
-      "Conf:   180 | MaxClusterSize:   899 | %age Clustered: 88.06 | %age Strong : 71.60 | Cluster Charge : -114\n",
-      "Conf:   190 | MaxClusterSize:   914 | %age Clustered: 87.42 | %age Strong : 71.93 | Cluster Charge : -148\n",
-      "Conf:   200 | MaxClusterSize:   876 | %age Clustered: 86.94 | %age Strong : 72.95 | Cluster Charge : -131\n",
-      "Exited loop\n",
-      "\n",
-      "Overall     | MaxClusterSize: 927.36 | %age Clustered: 88.14 | %age Strong : 71.22 | Cluster Charge : -143.00\n",
-      "The elapsed time is 24.407677 seconds\n",
-      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "make: Entering directory '/home/avinash/Projects/KDP_Clustering/bin'\n",
-      "./test -f ../ExampleData/M1B_S4_avi.xtc -t ../ExampleData/run1664.top -o ../ExampleData/M1B_S4_out.pdb -m 10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Conf:     0 | MaxClusterSize:  1337 | %age Clustered: 90.56 | %age Strong : 73.17 | Cluster Charge : -198\n",
-      "Conf:    10 | MaxClusterSize:  1315 | %age Clustered: 91.41 | %age Strong : 71.20 | Cluster Charge : -188\n",
-      "Conf:    20 | MaxClusterSize:  1329 | %age Clustered: 92.01 | %age Strong : 71.36 | Cluster Charge : -163\n",
-      "Conf:    30 | MaxClusterSize:  1340 | %age Clustered: 90.62 | %age Strong : 70.81 | Cluster Charge : -188\n",
-      "Conf:    40 | MaxClusterSize:  1307 | %age Clustered: 90.62 | %age Strong : 70.70 | Cluster Charge : -198\n",
-      "Conf:    50 | MaxClusterSize:  1329 | %age Clustered: 91.83 | %age Strong : 72.30 | Cluster Charge : -217\n",
-      "Conf:    60 | MaxClusterSize:  1316 | %age Clustered: 90.62 | %age Strong : 69.97 | Cluster Charge : -176\n",
-      "Conf:    70 | MaxClusterSize:  1306 | %age Clustered: 91.95 | %age Strong : 72.17 | Cluster Charge : -185\n",
-      "Conf:    80 | MaxClusterSize:  1318 | %age Clustered: 91.35 | %age Strong : 72.44 | Cluster Charge : -204\n",
-      "Conf:    90 | MaxClusterSize:  1329 | %age Clustered: 91.95 | %age Strong : 70.97 | Cluster Charge : -214\n",
-      "Conf:   100 | MaxClusterSize:  1313 | %age Clustered: 91.17 | %age Strong : 69.81 | Cluster Charge : -181\n",
-      "Conf:   110 | MaxClusterSize:  1315 | %age Clustered: 92.25 | %age Strong : 71.92 | Cluster Charge : -195\n",
-      "Conf:   120 | MaxClusterSize:  1347 | %age Clustered: 92.25 | %age Strong : 70.98 | Cluster Charge : -210\n",
-      "Conf:   130 | MaxClusterSize:  1268 | %age Clustered: 91.17 | %age Strong : 71.34 | Cluster Charge : -175\n",
-      "Conf:   140 | MaxClusterSize:  1334 | %age Clustered: 90.81 | %age Strong : 71.01 | Cluster Charge : -216\n",
-      "Conf:   150 | MaxClusterSize:  1305 | %age Clustered: 90.99 | %age Strong : 71.28 | Cluster Charge : -202\n",
-      "Conf:   160 | MaxClusterSize:  1322 | %age Clustered: 92.07 | %age Strong : 71.73 | Cluster Charge : -223\n",
-      "Conf:   170 | MaxClusterSize:  1292 | %age Clustered: 91.89 | %age Strong : 72.42 | Cluster Charge : -200\n",
-      "Conf:   180 | MaxClusterSize:  1332 | %age Clustered: 91.29 | %age Strong : 70.87 | Cluster Charge : -205\n",
-      "Conf:   190 | MaxClusterSize:  1282 | %age Clustered: 91.77 | %age Strong : 70.89 | Cluster Charge : -208\n",
-      "Conf:   200 | MaxClusterSize:  1322 | %age Clustered: 91.11 | %age Strong : 71.10 | Cluster Charge : -198\n",
-      "Exited loop\n",
-      "\n",
-      "Overall     | MaxClusterSize: 1314.26 | %age Clustered: 91.26 | %age Strong : 71.30 | Cluster Charge : -197.28\n",
-      "The elapsed time is 40.531958 seconds\n",
-      "make: Leaving directory '/home/avinash/Projects/KDP_Clustering/bin'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def plot_dist(df):\n",
-    "    plt.plot(np.array(range(1,df.shape[1]+1)/df.shape[1]), df.mean(axis=0)/df.shape[1])\n",
+    "    plt.plot(np.array(range(1,df.shape[1]+1)), df.mean(axis=0)/df.mean(axis=0).sum())\n",
+    "    \n",
+    "def plot_dist_sum(df):\n",
+    "    plt.plot(np.array(range(1,df.shape[1]+1)), df.sum(axis=0))\n",
     "    \n",
     "def plotit(items):\n",
     "    plt.figure(1)\n",
     "    plt.xlabel(\"Cluster size\")\n",
-    "    plt.ylabel(\"Probability of atom belonging to cluster\")\n",
+    "    #plt.ylabel(\"Probability of atom belonging to cluster\")\n",
+    "    plt.ylabel(\"Number of clusters\")\n",
     "    for i in items:\n",
     "        s=\"make \"+i+\" -C bin\"\n",
     "        os.system(s)\n",
@@ -224,12 +75,35 @@
     "        cluster_element_count*=range(1,cluster_element_count.shape[1]+1)\n",
     "        \n",
     "        assert((np.array(cluster_element_count.sum(axis=1))==np.ones(len(cluster_element_count.index))*no_of_molecules).all()), \"Sum of molecules not consistent\"\n",
-    "        plot_dist(cluster_element_count)\n",
+    "        plot_dist(cluster_size_count)\n",
     "    plt.legend(items)\n",
     "    plt.show()\n",
     "\n",
+    "def plotit2(items2):\n",
+    "    plt.figure(1)\n",
+    "    plt.xlabel(\"Cluster size\")\n",
+    "    #plt.ylabel(\"Probability of atom belonging to cluster\")\n",
+    "    plt.ylabel(\"Number of clusters\")\n",
+    "    for i in items2:\n",
+    "        s=\"BS\"+i+\"_stat.dat\"\n",
+    "        cluster_size_count=pd.read_csv(\"./bin/\"+s,header=None,index_col=None,sep=\" \")\n",
+    "        cluster_size_count=cluster_size_count.drop(axis=1, columns=cluster_size_count.shape[1]-1)\n",
+    "        cluster_size_count.columns=range(1,cluster_size_count.shape[1]+1)\n",
+    "        no_of_molecules=cluster_size_count.shape[1]\n",
+    "        \n",
+    "        cluster_element_count=cluster_size_count.copy()\n",
+    "        cluster_element_count*=range(1,cluster_element_count.shape[1]+1)\n",
+    "        \n",
+    "        assert((np.array(cluster_element_count.sum(axis=1))==np.ones(len(cluster_element_count.index))*no_of_molecules).all()), \"Sum of molecules not consistent\"\n",
+    "        plot_dist(cluster_size_count)\n",
+    "    plt.legend(items)\n",
+    "    plt.show()\n",
+    "    \n",
+    "\n",
     "items=[\"bsh\",\"bs1\",\"bs2\",\"bs3\",\"bs4\"]\n",
-    "plotit(items)"
+    "items1=[\"H\",\"1\",\"2\",\"3\",\"4\"]\n",
+    "#plotit(items)\n",
+    "plotit2(items1)"
    ]
   },
   {
@@ -1049,32 +923,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1     99.059701\n",
-       "2     17.776119\n",
-       "3      4.353234\n",
-       "4      1.258706\n",
-       "5      0.402985\n",
-       "6      0.159204\n",
-       "7      0.034826\n",
-       "8      0.009950\n",
-       "9      0.000000\n",
-       "10     0.000000\n",
-       "dtype: float64"
+       "1664.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cluster_size_count.mean(axis=0)[0:10]"
+    "cluster_element_count.mean(axis=0).sum()"
    ]
   },
   {
