--- a/Clustering_Metric.ipynb
+++ b/Clustering_Metric.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe38c5840a0>]"
+       "[<matplotlib.lines.Line2D at 0x7f3b943873a0>]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Matplotlib Test\n",
     "x=np.linspace(0,10)\n",
     "y=x**2\n",
     "plt.plot(x,y)"
